@@ -1,5 +1,4 @@
 TODO / Feature list
-+ snapshots
 + translation support
 + stats cleanup. Management functions should be standalone
 + theme support
