@@ -12,3 +12,11 @@ https://developers.google.com/web/tools/puppeteer
 
 chromdriver and chrome was also some overkill and there was no simple
 php implementation.
+
+It will be created if the option is actived. To remove uncheck the option.
+To refresh uncheck the option. Save. This will delete the data.
+Check the option again and the page screnshot will be created again.
+
+Any error in this process will be visible in the error log file
+and not visible in the client. This way the link will be saved
+and no data will be lost.
