@@ -1,1 +1,3 @@
-Inispid uses https://github.com/ifsnop/mysqldump-php as a simple complete DB dump as backup strategy
+Inispid uses
+- https://github.com/ifsnop/mysqldump-php as a simple complete DB dump as backup strategy
+- https://github.com/mikehaertl/php-shellcommand
